• fix overflow of translation container • reduce size of [i/e] & [o/u] in translation

--- a/src/components/Content/BaybayinTranslator.scss
+++ b/src/components/Content/BaybayinTranslator.scss
@@ -40,9 +40,11 @@
         grid-area: preview;
         color: #777;
         font-size: 21px;
+        overflow: auto;
         
         .dimmed {
             color: gainsboro;
+            font-size: small;
         }
     }
     
